word wrap fixed

--- a/react-app/src/components/Answers/CreateAnswer/createanswer.css
+++ b/react-app/src/components/Answers/CreateAnswer/createanswer.css
@@ -36,7 +36,8 @@
 } 
 .inputbody{
     width: 500px;
-    height: 700px
+    height: 700px;
+    word-wrap: break-word;
   
 }
 .error{
