--- a/react-app/src/components/Answers/ManageAnswer/manageAnswers.css
+++ b/react-app/src/components/Answers/ManageAnswer/manageAnswers.css
@@ -54,6 +54,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
   line-height: 20px;
+  word-wrap: break-word;
 
 }
 
